name:                sfnt2woff
version:             0.1.0.0
synopsis:            A command line tool to convert TrueType/OpenType fonts to WOFF format
description:         Please see README.md
homepage:            https://github.com/kseo/sfnt2woff#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           BSD3
category:            Graphics
build-type:          Simple
extra-source-files:  woff/*.h
                     woff/*.c
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.WOFF
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.0 && < 0.11.0
  default-language:    Haskell2010
  build-tools:         hsc2hs
  include-dirs:        woff
  c-sources:           woff/woff.c
  extra-libraries:     z

executable sfnt2woff
  hs-source-dirs:      sfnt2woff
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10.0 && < 0.11.0
                     , filepath >= 1.4.0 && < 1.5.0
                     , optparse-applicative >= 0.12.0 && < 0.13.0
                     , parsec >= 3.1.10 && < 3.2
                     , sfnt2woff
  other-modules:       VersionParser
  default-language:    Haskell2010

test-suite sfnt2woff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sfnt2woff
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/sfnt2woff
